examples/pos/TernaerOper-Pos.iml
program ternaereOperatorPos()
global
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool;

  fun rbf()
  returns m: bool
  do
    m init := false
  endfun

do
  i1 init := 1;
  i2 init := 2;
  b1 init := true;
  b2 init := false;

  // TC simple eval takes left Expr
  debugout true ? 1 : 2;
  // TC simple eval takes right Expr
  debugout false ? 1 : 2;

  // TC take left Expr
  debugout b1 ? i1 : i2;
  // TC take right Expr
  debugout b2 ? i1 : i2;

  // TC with operation
  debugout b1 ? i1 * i2 : i2;

  // TC with fucntion
  debugout b1 ? rbf() : b2;
  debugout rbf() ? b1 : rbf();

  // TC in TC
  debugout b2 ? i1 : b1 ? i1 * 3 : i2
endprogram