examples/neg/ParallelAssignment-Neg4.iml
// type missmatch by function retrun value
program parallelAssignmentNeg()
global
  fun ri3()
  returns m: int64
  do
    m init := 3
  endfun;
  fun rbf()
  returns m: bool
  do
    m init := false
  endfun

do
  var i1: int64;
  var i2: int64;
  var b1: bool;
  var b2: bool;
  i1 init := 1;
  i2 init := 2;
  b1 init := false;
  b2 init := true;
  i1, i2, b1, b2 := ri3(), rbf(), rbf(), ri3()
endprogram
